--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "Manchester Codes",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.14"
